[fix] h2를 활용한 jpa 테스트 추가